Revision history for JSON-Schema-Modern

{{$NEXT}}

0.598     2025-01-19 18:30:32Z
          - fix format acceptance tests that would fail when some optional
            modules are not installed
          - fix some acceptance tests that used the wrong validate_formats
            mode (since v0.592)

0.597     2024-12-07 23:30:38Z
          - report installed version of builtin

0.596     2024-11-24 00:57:13Z
          - properly handle changing of dialects (including swapping out
            vocabularies and keywords) when evaluating a local subschema
            (without a $ref)
          - now collecting identifiers within contentSchema keywords as we do
            for any other subschema

0.595     2024-11-07 18:57:16Z
          - bump required version of builtin::compat

0.594     2024-11-03 17:01:42Z
          - improved handling of numeric type checking in draft4
          - numeric type checking is relaxed, now allowing for dualvars
            arising from the simple case of using a number in string context
            or a string in numeric context (only a problem in perls <5.36)

0.593     2024-10-14 18:43:23Z
          - fix new integer type tests that fail on perls < 5.35.9

0.592     2024-10-13 19:43:20Z
          - support added for the draft4, draft6 specification versions

0.591     2024-10-06 21:06:15Z
          - new --dump-identifiers option in json-schema-eval executable
          - the document form of 'add_schema' has been extracted out into
            'add_document', with the old form deprecated
          - is_equal() utility function, and the const and enum keywords, now
            provide more detailed error diagnostics
          - fix "strict" mode for draft7 documents

0.590     2024-09-07 00:48:50Z
          - "strict" mode is now recognized by validate_schema(), to report on
            any unrecognized keywords used in the schema being validated

0.589     2024-07-06 21:07:44Z
          - skip unpassable tests when ivsize < 8
