@@ -60,6 +60,9 @@ Cpanel::JSON::XS = 4.38         ; support for core bools
 
 [Breaks]
 JSON::Schema::Modern::Vocabulary::OpenAPI = < 0.017   ; is_uri_reference
-JSON::Schema::Modern::Document::OpenAPI = < 0.055   ; $state->{depth} must now be defined
+JSON::Schema::Modern::Document::OpenAPI = < 0.077     ; ::Result boolean overload
+OpenAPI::Modern = < 0.077                             ; ::Result boolean overload
+Mojolicious::Plugin::OpenAPI::Modern = < 0.014        ; ::Result boolean overload
+Test::Mojo::Role::OpenAPI::Modern = < 0.007           ; ::Result boolean overload
 
 [Test::CheckBreaks]
