@@ -23,12 +23,16 @@ use JSON::Schema::Modern::Annotation;
 use JSON::Schema::Modern::Error;
 use JSON::PP ();
 use List::Util 1.50 qw(any uniq all);
+use Carp 'croak';
 use builtin::compat qw(refaddr blessed);
 use Safe::Isa;
 use namespace::clean;
 
 use overload
-  'bool'  => sub { $_[0]->valid },
+  'bool'  => sub {
+    croak 'boolean overload is deprecated and could be removed anytime after 2026-02-01';
+    $_[0]->valid;
+  },
   '&'     => \&combine,
   '""' => sub { $_[0]->stringify },
   fallback => 1;
@@ -281,9 +285,6 @@ L<JSON::Schema::Modern>.
 The object contains a string overload, which evaluates to a potentially multi-line string
 summarizing the errors within (if any); this is intended to be used as a user-oriented error message
 that references data locations, but not schema locations.
-
-The object contains a I<boolean> overload, which evaluates to the value of L</valid>, so you can
-use the result of L<JSON::Schema::Modern/evaluate> in boolean context.
 
 =for stopwords iff
 
